# cook

./: .cspell.json  CHANGELOG.md  README.md  menu.py  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yaml
src/cook/: __init__.py  _typing.py  context.py  menu.py  rule.py  runner.py  text.py  types.py  typing.py  utils.py
src/cook/core/: menu.py  rule.py
src/cook/core/recipe/: __init__.py  _abc.py  _exec.py
src/cook/recipe/: __init__.py  _abc.py  exec.py
