[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = ["typer>=0.12.3"]
description = "Add your description here"
license = { text = "MIT" }
name = "cook"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[project.scripts]
"cook" = "cook:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cook"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
dev-dependencies = []
managed = true
