[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = ["pydantic>=2.7.1"]
description = "Add your description here"
license = { text = "MIT" }
name = "cook"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.0.0"

[project.scripts]
"cook" = "cook:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cook"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
dev-dependencies = ["icecream>=2.1.3"]
managed = true
