[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = [
  "loguru>=0.7.2",
  "networkx>=3.3",
  "pydantic>=2.7.1",
  "sh>=2.0.6",
  "typer>=0.12.3",
]
description = "Add your description here"
license = { text = "MIT" }
name = "liblaf-cook"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/cook"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
dev-dependencies = ["icecream>=2.1.3", "ipykernel>=6.29.4"]
managed = true
